--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
 
             <!-- Company 1 -->
             <div class="company-container">
-                <h4 class="subtitle">Produktionshelfer <span class="subtitle-orange">Paragon GmbH</span>
+                <h4 class="subtitle">Produktionshelfer <span class="subtitle-orange">Paragon AG</span>
                 </h4>
                 <p class="work-experience-education-date">November 2023 - up to now | Deutschland</p>
             </div>
@@ -153,7 +153,7 @@
                 </p>
             </div>
             <div class="education">
-                <h4 class="subtitle subtitle-orange">Tibor GmbH</h4>
+                <h4 class="subtitle subtitle-orange">Tibor mbH</h4>
                 <div class="education-container">
                     <h4 class="profession">Deutschkurs A0 - B2</h4>
                     <span class="work-experience-education-date">Februar 2019 - Oktober 2022 | Deutschland (Suhl)
