--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 
             <!-- Company 2 -->
             <div class="company-container">
-                <h4 class="subtitle">Full Stack Developer <span class="subtitle-orange">Выпускной-Pet-project</span>
+                <h4 class="subtitle">Full Stack Developer <span class="subtitle-orange">Abschluss-Pet-project</span>
                 </h4>
                 <p class="work-experience-education-date">Juni 2023 - Juli 2023 | Deutschland</p>
                 <ul class="work-experience-list">
