--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
         <section class="section">
             <h3 class="title">Education</h3>
             <div class="education">
-                <h4 class="subtitle subtitle-orange">AIT</h4>
+                <h4 class="subtitle subtitle-orange">AIT TR GmbH</h4>
                 <div class="education-container">
                     <h4 class="profession">Full Stack Developer</h4>
                     <span class="work-experience-education-date">Oktober 2022 - Juli 2023 | Deutschland (Berlin)</span>
