added new project: competence

--- a/index.html
+++ b/index.html
@@ -36,18 +36,34 @@
                 <li class="project-list-number">
                     <a class="text project-link"
                         href="https://zmei55.github.io/html_css_scss_mobile-first/">WebStudio</a>
-                    <span class="text">. . . . . . . . . . . . . . . . . . . . . . . . . </span>
+                    <span class="text">. . . . . . . . . . . . . . . . . . . . . . . . . . . . .</span>
                     <span>[ <span class="text">HTML5, CSS3, SCSS</span> ]</span>
-                    <div class="text">Einfache Webstudio-Website.</div>
+                    <div class="text">Persönliches Projekt. Einfache Webstudio-Website.</div>
                 </li>
+
                 <li class="project-list-number">
                     <a class="text project-link" href="https://zmei55.github.io/hospital_react_ts/">Hospital</a>
-                    <span class="text">. . . . . . . . . . . . . . . . . . . . . . . . . . . .</span>
-                    <span>[ <span class="text">React, TypeScript, RTK Query, React-router-dom</span> ]</span>
-                    <div class="text">SPA des Krankenhaus. Derzeit hat die Arbeit am Behandlungsraum zur Blutentnahme
+                    <span class="text">. . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . .</span>
+                    <span>[ <span class="text">React, TypeScript, RTK Query, React-router-dom, Node.js, Express,
+                            Mongoose, MongoDB</span> ]</span>
+                    <div class="text">Persönliches Projekt. SPA des Krankenhaus. Derzeit hat die Arbeit am
+                        Behandlungsraum zur Blutentnahme
                         umgesetzt und einen Zweck eines Labors, in dem die Analyse durchgeführt wird. Es wird eine
                         Administratorseite entwickelt, auf der die Arbeit mit Benutzern (Krankenhausmitarbeitern)
                         implementiert wird.
+                    </div>
+                </li>
+
+                <li class="project-list-number">
+                    <a class="text project-link" href="">Competa be competent</a>
+                    <span class="text">. . . . . . . . . . . . . . .</span>
+                    <span>[ <span class="text">React, TypeScript, Redux Toolkit, React-router-dom, Java, Spring
+                            Framework, MySQL</span> ]</span>
+                    <div class="text">Team-Projekt. Eine Anwendung für die Arbeit mit Benutzerkompetenzen: Jeder Schüler
+                        (Benutzer) bildet seinen eigenen, einzigartigen Satz an Kompetenzen. Andere Benutzer (andere
+                        Schüler oder Lehrer) sowie Dritte (die keine Benutzer dieser Anwendung sind) können das
+                        Vorhandensein dieser Kompetenzen bestätigen oder dementieren sowie ihre
+                        Kommentare hinterlassen.
                     </div>
                 </li>
             </ol>
@@ -75,6 +91,18 @@
                     <span class="text">. . . . . . . . . . . . . . . . . . . . . . . . . . . .</span>
                     <span>[ <span class="text">Java, Spring Framework, MySQL, JwtToken</span> ]</span>
                 </li>
+                <li class="project-list-number">
+                    <a class="text project-link" href="https://github.com/ait-tr/competence-frontend">Competa be
+                        competent</a>
+                    <span class="text">. . . . . . . . . . . </span>
+                    <span>[ <span class="text">React, TypeScript, RTK Query, React-router-dom</span> ]</span>
+                </li>
+                <li class="project-list-number">
+                    <a class="text project-link" href="https://github.com/Zmei55/competence-backend">Competa be
+                        competent</a>
+                    <span class="text"> . . . . . . . . . . . </span>
+                    <span>[ <span class="text">Java, Spring Framework, MySQL, JwtToken</span> ]</span>
+                </li>
             </ul>
 
         </section>
@@ -83,25 +111,43 @@
         <section class="section">
             <h3 class="title">Work Experience</h3>
 
-            <!-- Company 3 -->
+            <!-- Company 5 -->
+            <div class="company-container">
+                <h4 class="subtitle">
+                    Full Stack Developer <span class="subtitle-orange">Team-Projekt</span>
+                </h4>
+                <p class="work-experience-education-date">Februar 2024 - up to now | Deutschland</p>
+                <ul class="work-experience-list">
+                    <li>GUI-Entwicklung mit React, Redux Toolkit, React-router-dom, Formik, Material UI.</li>
+                    <li>Verarbeitung von Formulardaten, Senden und Empfangen von Daten mithilfe der REST-API.</li>
+                    <li>Entwicklung eines Datenverarbeitungsservers (Speichern in einer Datenbank und Abrufen von Daten
+                        aus einer Datenbank) mithilfe REST API. Einen Bund Java, Spring Framework + MySQL.
+                    </li>
+                    <li>Implementierung der Autorisierung auf dem Server mittels JWT.</li>
+                    <li>Implementierung der Autorisierung auf dem Server mittels soziale Netzwerke (KeyCloak).</li>
+                </ul>
+            </div>
+
+            <!-- Company 4 -->
             <div class="company-container">
                 <h4 class="subtitle">
                     Full Stack Developer <span class="subtitle-orange">Pet-project</span>
                 </h4>
-                <p class="work-experience-education-date">April 2023 - up to now | Deutschland</p>
+                <p class="work-experience-education-date">April 2023 - Februar 2024 | Deutschland</p>
                 <ul class="work-experience-list">
-                    <li>GUI-Entwicklung mit React, Redux, RTK Query.</li>
+                    <li>GUI-Entwicklung mit React, Redux, RTK Query, React-router-dom, React Hook Form, @Emotion.</li>
                     <li>Verarbeitung von Formulardaten, Senden und Empfangen von Daten mithilfe der REST-API.</li>
                     <li>Entwicklung eines Datenverarbeitungsservers (Speichern in einer Datenbank und Abrufen von Daten
-                        aus einer Datenbank) mithilfe REST API. Einen Bund Node + MongoDB.
+                        aus einer Datenbank) mithilfe REST API. Einen Bund Node.js + Express + Mongoose + MongoDB.
                     </li>
                     <li>Entwicklung eines Datenverarbeitungsservers (Speichern in einer Datenbank und Abrufen von Daten
                         aus einer Datenbank) mithilfe REST API. Einen Bund Java, Spring Framework + MySQL.
                     </li>
+                    <li>Implementierung der Autorisierung auf dem Server mittels JWT.</li>
                 </ul>
             </div>
 
-            <!-- Company 2 -->
+            <!-- Company 3 -->
             <div class="company-container">
                 <h4 class="subtitle">Full Stack Developer <span class="subtitle-orange">Abschluss-Pet-project</span>
                 </h4>
@@ -116,13 +162,14 @@
                 </ul>
             </div>
 
-            <!-- Company 1 -->
+            <!-- Company 2 -->
             <div class="company-container">
                 <h4 class="subtitle">Produktionshelfer <span class="subtitle-orange">Paragon AG</span>
                 </h4>
                 <p class="work-experience-education-date">November 2023 - up to now | Deutschland</p>
             </div>
 
+            <!-- Company 1 -->
             <div class="company-container">
                 <h4 class="subtitle">
                     Notarzt <span class="subtitle-orange">Notdienst</span>
