paragon date updated

--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
             <div class="company-container">
                 <h4 class="subtitle">Produktionshelfer <span class="subtitle-orange">Paragon AG</span>
                 </h4>
-                <p class="work-experience-education-date">November 2023 - up to now | Deutschland</p>
+                <p class="work-experience-education-date">November 2022 - Februar 2024 | Deutschland</p>
             </div>
 
             <!-- Company 1 -->
