--- a/index.html
+++ b/index.html
@@ -42,28 +42,65 @@
                 </li>
 
                 <li class="project-list-number">
-                    <a class="text project-link" href="https://zmei55.github.io/hospital_react_ts/">Hospital</a>
+                    <a class="text project-link" href="https://zmei55.github.io/hospital_react_ts/"
+                        target="_blank">Hospital</a>
                     <span class="text">. . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . .</span>
                     <span>[ <span class="text">React, TypeScript, RTK Query, React-router-dom, Node.js, Express,
                             Mongoose, MongoDB</span> ]</span>
-                    <div class="text">Persönliches Projekt. SPA des Krankenhaus. Derzeit hat die Arbeit am
-                        Behandlungsraum zur Blutentnahme
-                        umgesetzt und einen Zweck eines Labors, in dem die Analyse durchgeführt wird. Es wird eine
-                        Administratorseite entwickelt, auf der die Arbeit mit Benutzern (Krankenhausmitarbeitern)
-                        implementiert wird.
+                    <div class="text">SPA des Krankenhaus. Derzeit hat die Arbeit am Behandlungsraum zur Blutentnahme
+                        umgesetzt
+                        und einen Zweck eines Labors, in dem die Analyse durchgeführt wird.
+                        <ul>
+                            <li>GUI-Entwicklung mit React, Redux, RTK Query, React-router-dom, React Hook Form,
+                                @Emotion.
+                            </li>
+                            <li>Verarbeitung von Formulardaten, Senden und Empfangen von Daten mithilfe der REST-API.
+                            </li>
+                            <li>Entwicklung eines Datenverarbeitungsservers (Speichern in einer Datenbank und Abrufen
+                                von
+                                Daten aus einer Datenbank) mithilfe REST API. Einen Bund Node.js + Express + Mongoose +
+                                MongoDB.
+                            </li>
+                            <li>Entwicklung eines Datenverarbeitungsservers (Speichern in einer Datenbank und Abrufen
+                                von
+                                Daten aus einer Datenbank) mithilfe REST API. Einen Bund Java, Spring Framework + MySQL.
+                            </li>
+                            <li>Implementierung der Autorisierung auf dem Server mittels JWT.</li>
+                        </ul>
+                        Zu dieser Etappe wurde das Projekt zur Integration in die Krankenhausanwendung abgeholt.
                     </div>
                 </li>
 
                 <li class="project-list-number">
-                    <a class="text project-link" href="">Competa be competent</a>
-                    <span class="text">. . . . . . . . . . . . . . .</span>
+                    <a class="text project-link" href="https://competa-dev-bq4in.ondigitalocean.app/"
+                        target="_blank">Kompetenzzentrum
+                        für Studierende</a>
+                    <span class="text">(Fähigkeitenbewertung und -management)</span>
+                    <span class="text">. . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . .
+                        . . . . . . . . . . .</span>
                     <span>[ <span class="text">React, TypeScript, Redux Toolkit, React-router-dom, Java, Spring
                             Framework, MySQL</span> ]</span>
                     <div class="text">Team-Projekt. Eine Anwendung für die Arbeit mit Benutzerkompetenzen: Jeder Schüler
-                        (Benutzer) bildet seinen eigenen, einzigartigen Satz an Kompetenzen. Andere Benutzer (andere
-                        Schüler oder Lehrer) sowie Dritte (die keine Benutzer dieser Anwendung sind) können das
-                        Vorhandensein dieser Kompetenzen bestätigen oder dementieren sowie ihre
-                        Kommentare hinterlassen.
+                        (Benutzer)
+                        bildet seinen eigenen, einzigartigen Satz an Kompetenzen. Andere Benutzer (andere Schüler oder
+                        Lehrer) sowie Dritte (die keine Benutzer dieser Anwendung sind) können das Vorhandensein
+                        dieser Kompetenzen bestätigen oder dementieren sowie ihre Kommentare hinterlassen.
+                        <ul>
+                            <li>GUI-Entwicklung mit React, Redux Toolkit, React-router-dom, Formik, Material UI.</li>
+                            <li>Verarbeitung von Formulardaten, Senden und Empfangen von Daten mithilfe der REST-API.
+                            </li>
+                            <li>Entwicklung eines Datenverarbeitungsservers (Speichern in einer Datenbank und Abrufen
+                                von
+                                Daten aus einer Datenbank) mithilfe REST API. Einen Bund Java, Spring Framework + MySQL.
+                            </li>
+                            <li>Implementierung der Autorisierung auf dem Server mittels JWT.</li>
+                            <li>Ich helfe bei der Integration neuer Azubis, helfe ihm beim Schreiben von Code und führe
+                                bei
+                                Bedarf Refactorings und Bugfixes durch.
+                            </li>
+                        </ul>
+                        Ich interessiere mich für dieses Projekt und seine Zukunft. Darin kann ich neue Technologien
+                        anwenden und mein Verständnis dieser Technologien verbessern.
                     </div>
                 </li>
             </ol>
@@ -73,34 +110,39 @@
                 <li class="project-list-number">
                     <a class="text project-link"
                         href="https://github.com/Zmei55/html_css_scss_mobile-first">WebStudio</a>
-                    <span class="text">. . . . . . . . . . . . . . . . . . . . . . . . . </span>
+                    <span class="text">. . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . .</span>
                     <span>[ <span class="text">HTML5, CSS3, SCSS</span> ]</span>
                 </li>
                 <li class="project-list-number">
                     <a class="text project-link" href="https://github.com/Zmei55/hospital_react_ts">Hospital</a>
-                    <span class="text">. . . . . . . . . . . . . . . . . . . . . . . . . . . .</span>
+                    <span class="text"> . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . .
+                        .</span>
                     <span>[ <span class="text">React, TypeScript, RTK Query, React-router-dom</span> ]</span>
                 </li>
                 <li class="project-list-number">
                     <a class="text project-link" href="https://github.com/Zmei55/hospital_node">Hospital</a>
-                    <span class="text"> . . . . . . . . . . . . . . . . . . . . . . . . . . . . </span>
+                    <span class="text"> . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . .
+                    </span>
                     <span>[ <span class="text">Node.js, Express, Mongoose, MongoDB, JwtToken</span> ]</span>
                 </li>
                 <li class="project-list-number">
                     <a class="text project-link" href="https://github.com/Zmei55/hospital_spring">Hospital</a>
-                    <span class="text">. . . . . . . . . . . . . . . . . . . . . . . . . . . .</span>
+                    <span class="text"> . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . .
+                    </span>
                     <span>[ <span class="text">Java, Spring Framework, MySQL, JwtToken</span> ]</span>
                 </li>
                 <li class="project-list-number">
-                    <a class="text project-link" href="https://github.com/ait-tr/competence-frontend">Competa be
-                        competent</a>
-                    <span class="text">. . . . . . . . . . . </span>
+                    <a class="text project-link" href="https://github.com/ait-tr/competence-frontend"
+                        target="_blank">Kompetenzzentrum
+                        für Studierende</a>
+                    <span class="text"> . . . . . . . .</span>
                     <span>[ <span class="text">React, TypeScript, RTK Query, React-router-dom</span> ]</span>
                 </li>
                 <li class="project-list-number">
-                    <a class="text project-link" href="https://github.com/Zmei55/competence-backend">Competa be
-                        competent</a>
-                    <span class="text"> . . . . . . . . . . . </span>
+                    <a class="text project-link" href="https://github.com/Zmei55/competence-backend"
+                        target="_blank">Kompetenzzentrum
+                        für Studierende</a>
+                    <span class="text"> . . . . . . . .</span>
                     <span>[ <span class="text">Java, Spring Framework, MySQL, JwtToken</span> ]</span>
                 </li>
             </ul>
@@ -114,37 +156,21 @@
             <!-- Company 5 -->
             <div class="company-container">
                 <h4 class="subtitle">
-                    Full Stack Developer <span class="subtitle-orange">Team-Projekt</span>
+                    Full Stack Developer <span class="subtitle-orange">AIT TR GmbH</span>
                 </h4>
                 <p class="work-experience-education-date">Februar 2024 - up to now | Deutschland</p>
-                <ul class="work-experience-list">
-                    <li>GUI-Entwicklung mit React, Redux Toolkit, React-router-dom, Formik, Material UI.</li>
-                    <li>Verarbeitung von Formulardaten, Senden und Empfangen von Daten mithilfe der REST-API.</li>
-                    <li>Entwicklung eines Datenverarbeitungsservers (Speichern in einer Datenbank und Abrufen von Daten
-                        aus einer Datenbank) mithilfe REST API. Einen Bund Java, Spring Framework + MySQL.
-                    </li>
-                    <li>Implementierung der Autorisierung auf dem Server mittels JWT.</li>
-                    <li>Implementierung der Autorisierung auf dem Server mittels soziale Netzwerke (KeyCloak).</li>
-                </ul>
+                <p class="text">Team-Projekt. Kompetenzzentrum für Studierende. (Ausführliche Beschreibung im Bereich
+                    „Projekte“)</p>
             </div>
 
             <!-- Company 4 -->
             <div class="company-container">
-                <h4 class="subtitle">
-                    Full Stack Developer <span class="subtitle-orange">Pet-project</span>
+                <h4 class="subtitle">Produktionshelfer <span class="subtitle-orange">Paragon AG</span>
                 </h4>
-                <p class="work-experience-education-date">April 2023 - Februar 2024 | Deutschland</p>
-                <ul class="work-experience-list">
-                    <li>GUI-Entwicklung mit React, Redux, RTK Query, React-router-dom, React Hook Form, @Emotion.</li>
-                    <li>Verarbeitung von Formulardaten, Senden und Empfangen von Daten mithilfe der REST-API.</li>
-                    <li>Entwicklung eines Datenverarbeitungsservers (Speichern in einer Datenbank und Abrufen von Daten
-                        aus einer Datenbank) mithilfe REST API. Einen Bund Node.js + Express + Mongoose + MongoDB.
-                    </li>
-                    <li>Entwicklung eines Datenverarbeitungsservers (Speichern in einer Datenbank und Abrufen von Daten
-                        aus einer Datenbank) mithilfe REST API. Einen Bund Java, Spring Framework + MySQL.
-                    </li>
-                    <li>Implementierung der Autorisierung auf dem Server mittels JWT.</li>
-                </ul>
+                <p class="work-experience-education-date">November 2022 - Februar 2024 | Deutschland</p>
+                <p class="text">Arbeitete als Kleinteilemonteur.</p>
+                <p class="text">Die Hauptaufgabe, die ich mir gesetzt habe, war, meine Kommunikation mit Menschen auf
+                    Deutsch zu verbessern.</p>
             </div>
 
             <!-- Company 3 -->
@@ -164,9 +190,21 @@
 
             <!-- Company 2 -->
             <div class="company-container">
-                <h4 class="subtitle">Produktionshelfer <span class="subtitle-orange">Paragon AG</span>
+                <h4 class="subtitle">
+                    Full Stack Developer <span class="subtitle-orange">Freelance</span>
                 </h4>
-                <p class="work-experience-education-date">November 2022 - Februar 2024 | Deutschland</p>
+                <p class="work-experience-education-date">2014 - 2018 | Russland</p>
+                <p class="text">Arbeitete mit privaten Aufträgen von Personen und Unternehmen.</p>
+                <ul class="work-experience-list">
+                    <li>Verfeinerung von Anwendungen.</li>
+                    <li>Fehlerbehebungen.</li>
+                    <li>Schreiben kleiner Websites und großer Anwendungen.</li>
+                </ul>
+                <p class="text">Ein Beispiel: SPA des Krankenhaus. Derzeit hat die Arbeit am Behandlungsraum zur
+                    Blutentnahme
+                    umgesetzt und einen Zweck eines Labors, in dem die Analyse durchgeführt wird. (Ausführliche
+                    Beschreibung im Bereich „Projekte“)
+                </p>
             </div>
 
             <!-- Company 1 -->
@@ -175,6 +213,12 @@
                     Notarzt <span class="subtitle-orange">Notdienst</span>
                 </h4>
                 <p class="work-experience-education-date">Juni 2010 - Dezember 2018 | Russland</p>
+                <p class="text">Arbeitete als Leiter eines Rettungsteams.</p>
+                <ul class="work-experience-list">
+                    <li>Ich untersuchte Patienten, stellte Diagnosen und verordnete eine Notfallbehandlung.</li>
+                    <li>War in verschiedenen Notsituationen für das Leben von Patienten verantwortlich.</li>
+                    <li>Habe schnelle und durchdachte Entscheidungen getroffen.</li>
+                </ul>
             </div>
         </section>
 
@@ -215,6 +259,13 @@
                     </span>
                 </div>
             </div>
+        </section>
+
+        <!-- Anderen Fähigkeiten -->
+        <section class="section">
+            <h3 class="title">Anderen Fähigkeiten</h3>
+            <h4 class="subtitle">Führerschein Klasse B (PKW)</h4>
+            <h4 class="subtitle">Staplerschein (Gabelstapler bis 2T)</h4>
         </section>
         </section>
 
