social_media_links_added

--- a/index.html
+++ b/index.html
@@ -273,12 +273,12 @@
 
     </main>
 
-    <aside class="sidebar-section">
+    <aside class="sidebar">
         <img src="img/photo.jpg" width="300px" alt="my photo">
 
         <!-- Contacts -->
-        <div class="contacts-section">
-            <h3 class="contacts-title">Contacts</h3>
+        <div class="sidebar-section">
+            <h3 class="sidebar-title">Contacts</h3>
             <div>
                 <a class="contacts-section-link" href="tel:+4915236375504">
                     <svg width="16" height="12" fill="#ffffff">
@@ -297,10 +297,27 @@
             </div>
         </div>
 
+        <!-- Social media links -->
+        <div class="sidebar-section">
+            <h3 class="sidebar-title">Links</h3>
+            <ul class="sidebar-list">
+                <li class="sidebar-list-item">
+                    <a href="https://www.linkedin.com/in/andrei-lerke/" target="_blank">
+                        <span class="list-text">LinkedIn</span>
+                    </a>
+                </li>
+                <li class="sidebar-list-item">
+                    <a href="https://www.xing.com/profile/Andrei_Lerke/web_profiles?expandNeffi=true" target="_blank">
+                        <span class="list-text">XING</span>
+                    </a>
+                </li>
+            </ul>
+        </div>
+
         <!-- Tech Skills -->
-        <div class="tech-skills-section">
-            <h3 class="tech-skills-title">Tech Skills</h3>
-            <ul class="tech-skills-list">
+        <div class="sidebar-section">
+            <h3 class="sidebar-title">Tech Skills</h3>
+            <ul class="sidebar-list">
                 <li class="sidebar-list-item"><span class="list-text">HTML5</span></li>
                 <li class="sidebar-list-item"><span class="list-text">CSS3, SCSS</span></li>
                 <li class="sidebar-list-item"><span class="list-text">JavaScript</span></li>
@@ -322,9 +339,9 @@
         </div>
 
         <!-- Soft Skills -->
-        <div class="soft-skills-section">
-            <h3 class="soft-skills-title">Soft Skills</h3>
-            <ul class="soft-skills-list">
+        <div class="sidebar-section">
+            <h3 class="sidebar-title">Soft Skills</h3>
+            <ul class="sidebar-list">
                 <li class="sidebar-list-item"><span class="list-text">Scrum</span></li>
                 <li class="sidebar-list-item"><span class="list-text">Jira</span></li>
                 <li class="sidebar-list-item"><span class="list-text">Teamwork</span></li>
