link_xing_updated

--- a/index.html
+++ b/index.html
@@ -307,7 +307,7 @@
                     </a>
                 </li>
                 <li class="sidebar-list-item">
-                    <a href="https://www.xing.com/profile/Andrei_Lerke/web_profiles?expandNeffi=true" target="_blank">
+                    <a href="https://www.xing.com/profile/Andrei_Lerke" target="_blank">
                         <span class="list-text">XING</span>
                     </a>
                 </li>
