--- a/index.html
+++ b/index.html
@@ -36,17 +36,17 @@
                 <li class="project-list-number">
                     <a class="text project-link"
                         href="https://zmei55.github.io/html_css_scss_mobile-first/">WebStudio</a>
-                    <span class="text">. . . . . . . . . . . . . . . . . . . . . . . . . . . . .</span>
-                    <span>[ <span class="text">HTML5, CSS3, SCSS</span> ]</span>
-                    <div class="text">Persönliches Projekt. Einfache Webstudio-Website.</div>
+                    <div class="text">Persönliches Projekt. Einfache Webstudio-Website.
+                        <ul>
+                            <li>HTML, CSS, SCSS.
+                            </li>
+                        </ul>
+                    </div>
                 </li>
 
                 <li class="project-list-number">
                     <a class="text project-link" href="https://zmei55.github.io/hospital_react_ts/"
                         target="_blank">Hospital</a>
-                    <span class="text">. . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . .</span>
-                    <span>[ <span class="text">React, TypeScript, RTK Query, React-router-dom, Node.js, Express,
-                            Mongoose, MongoDB</span> ]</span>
                     <div class="text">SPA des Krankenhaus. Derzeit hat die Arbeit am Behandlungsraum zur Blutentnahme
                         umgesetzt
                         und einen Zweck eines Labors, in dem die Analyse durchgeführt wird.
@@ -73,13 +73,8 @@
 
                 <li class="project-list-number">
                     <a class="text project-link" href="https://competa-dev-bq4in.ondigitalocean.app/"
-                        target="_blank">Kompetenzzentrum
-                        für Studierende</a>
-                    <span class="text">(Fähigkeitenbewertung und -management)</span>
-                    <span class="text">. . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . .
-                        . . . . . . . . . . .</span>
-                    <span>[ <span class="text">React, TypeScript, Redux Toolkit, React-router-dom, Java, Spring
-                            Framework, MySQL</span> ]</span>
+                        target="_blank">COMPETENCE ENGINE</a>
+                    <div class="text">Open source project.</div>
                     <div class="text">Team-Projekt. Eine Anwendung für die Arbeit mit Benutzerkompetenzen: Jeder Schüler
                         (Benutzer)
                         bildet seinen eigenen, einzigartigen Satz an Kompetenzen. Andere Benutzer (andere Schüler oder
@@ -87,6 +82,7 @@
                         dieser Kompetenzen bestätigen oder dementieren sowie ihre Kommentare hinterlassen.
                         <ul>
                             <li>GUI-Entwicklung mit React, Redux Toolkit, React-router-dom, Formik, Material UI.</li>
+                            <li>Agile, Jira.</li>
                             <li>Verarbeitung von Formulardaten, Senden und Empfangen von Daten mithilfe der REST-API.
                             </li>
                             <li>Entwicklung eines Datenverarbeitungsservers (Speichern in einer Datenbank und Abrufen
@@ -110,39 +106,34 @@
                 <li class="project-list-number">
                     <a class="text project-link"
                         href="https://github.com/Zmei55/html_css_scss_mobile-first">WebStudio</a>
-                    <span class="text">. . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . .</span>
+                    <span class="text">. . . . . . . . . . . . . . . . . . . </span>
                     <span>[ <span class="text">HTML5, CSS3, SCSS</span> ]</span>
                 </li>
                 <li class="project-list-number">
                     <a class="text project-link" href="https://github.com/Zmei55/hospital_react_ts">Hospital</a>
-                    <span class="text"> . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . .
-                        .</span>
+                    <span class="text"> . . . . . . . . . . . . . . . . . . . . . . </span>
                     <span>[ <span class="text">React, TypeScript, RTK Query, React-router-dom</span> ]</span>
                 </li>
                 <li class="project-list-number">
                     <a class="text project-link" href="https://github.com/Zmei55/hospital_node">Hospital</a>
-                    <span class="text"> . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . .
-                    </span>
+                    <span class="text"> . . . . . . . . . . . . . . . . . . . . . . </span>
                     <span>[ <span class="text">Node.js, Express, Mongoose, MongoDB, JwtToken</span> ]</span>
                 </li>
                 <li class="project-list-number">
                     <a class="text project-link" href="https://github.com/Zmei55/hospital_spring">Hospital</a>
-                    <span class="text"> . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . .
-                    </span>
+                    <span class="text"> . . . . . . . . . . . . . . . . . . . . . .</span>
                     <span>[ <span class="text">Java, Spring Framework, MySQL, JwtToken</span> ]</span>
                 </li>
                 <li class="project-list-number">
                     <a class="text project-link" href="https://github.com/ait-tr/competence-frontend"
-                        target="_blank">Kompetenzzentrum
-                        für Studierende</a>
-                    <span class="text"> . . . . . . . .</span>
+                        target="_blank">COMPETENCE ENGINE</a>
+                    <span class="text"> . . . . . .</span>
                     <span>[ <span class="text">React, TypeScript, RTK Query, React-router-dom</span> ]</span>
                 </li>
                 <li class="project-list-number">
                     <a class="text project-link" href="https://github.com/Zmei55/competence-backend"
-                        target="_blank">Kompetenzzentrum
-                        für Studierende</a>
-                    <span class="text"> . . . . . . . .</span>
+                        target="_blank">COMPETENCE ENGINE</a>
+                    <span class="text"> . . . . . .</span>
                     <span>[ <span class="text">Java, Spring Framework, MySQL, JwtToken</span> ]</span>
                 </li>
             </ul>
@@ -155,25 +146,35 @@
 
             <!-- Company 5 -->
             <div class="company-container">
-                <h4 class="subtitle">
-                    Full Stack Developer <span class="subtitle-orange">AIT TR GmbH</span>
+                <h4 class="subtitle">Produktionshelfer <span class="subtitle-orange">UST Umweltsensortechnik GmbH</span>
                 </h4>
-                <p class="work-experience-education-date">Februar 2024 - up to now | Deutschland</p>
-                <p class="text">Team-Projekt. Kompetenzzentrum für Studierende. (Ausführliche Beschreibung im Bereich
-                    „Projekte“)</p>
+                <p class="work-experience-education-date">November 2024 - laufend | Geschwenda, Thüringen, Deutschland
+                </p>
             </div>
 
             <!-- Company 4 -->
             <div class="company-container">
+                <h4 class="subtitle">
+                    Full Stack Developer <span class="subtitle-orange">COMPETENCE ENGINE</span>
+                </h4>
+                <p class="work-experience-education-date">Februar 2024 - laufend | Deutschland</p>
+                <p class="text">Open source project.</p>
+                <p class="text">Team-Projekt. COMPETENCE ENGINE. (Ausführliche Beschreibung im Bereich
+                    „Projekte“)</p>
+            </div>
+
+            <!-- Company 3 -->
+            <div class="company-container">
                 <h4 class="subtitle">Produktionshelfer <span class="subtitle-orange">Paragon AG</span>
                 </h4>
-                <p class="work-experience-education-date">November 2022 - Februar 2024 | Deutschland</p>
+                <p class="work-experience-education-date">November 2022 - Februar 2024 | Suhl, Thüringen, Deutschland
+                </p>
                 <p class="text">Arbeitete als Kleinteilemonteur.</p>
                 <p class="text">Die Hauptaufgabe, die ich mir gesetzt habe, war, meine Kommunikation mit Menschen auf
                     Deutsch zu verbessern.</p>
             </div>
 
-            <!-- Company 3 -->
+            <!-- Company 2 -->
             <div class="company-container">
                 <h4 class="subtitle">Full Stack Developer <span class="subtitle-orange">Abschluss-Pet-project</span>
                 </h4>
@@ -186,25 +187,6 @@
                         aus einer Datenbank) mithilfe REST API. Einen Bund Java, Spring Framework + MySQL.
                     </li>
                 </ul>
-            </div>
-
-            <!-- Company 2 -->
-            <div class="company-container">
-                <h4 class="subtitle">
-                    Full Stack Developer <span class="subtitle-orange">Freelance</span>
-                </h4>
-                <p class="work-experience-education-date">2014 - 2018 | Russland</p>
-                <p class="text">Arbeitete mit privaten Aufträgen von Personen und Unternehmen.</p>
-                <ul class="work-experience-list">
-                    <li>Verfeinerung von Anwendungen.</li>
-                    <li>Fehlerbehebungen.</li>
-                    <li>Schreiben kleiner Websites und großer Anwendungen.</li>
-                </ul>
-                <p class="text">Ein Beispiel: SPA des Krankenhaus. Derzeit hat die Arbeit am Behandlungsraum zur
-                    Blutentnahme
-                    umgesetzt und einen Zweck eines Labors, in dem die Analyse durchgeführt wird. (Ausführliche
-                    Beschreibung im Bereich „Projekte“)
-                </p>
             </div>
 
             <!-- Company 1 -->
